--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </section>
     </main> -->
     <!-- <input class="btn" type="text" onkeyup="betterFunction()"/> -->
-    <input class="btn" type="text" onkeyup="magic()"/>
-    <script src="practice.js"></script>
+    <input class="btn" type="text" onkeyup="magic2()"/>
+    <script src="debounce2.js"></script>
   </body>
 </html>
